--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "crudoperationfe",
+  "name": "packagingpartner",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,8 +14,10 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "material-ui": "^0.20.2",
+    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "util": "^0.12.4",
     "web-vitals": "^2.1.2"
